# BASELINE

./: .gitignore  README.md  TODO.md  pyproject.toml
baseline/: __init__.py  baseline_estimator.py  coordinate_rotator.py  variance_estimator.py
baseline_v2/: __init__.py  adapters.py  checkpoints.py  diagnostics.py  pipeline.py  reference_math.py  smoothing.py  step1c_prepare.py  step1c_reference.py  step1c_robust.py  types.py  variance.py
data/cache/step_1c/: DMH_2024_E_paper_mode_w5_step1c.pkl  DMH_2024_N_paper_mode_w5_step1c.pkl  DMH_2024_Z_paper_mode_w5_step1c.pkl
data/cache/step_1c_v2/: DMH_1min_2025_robust_E_w5_step1c.pkl  DMH_1min_2025_robust_N_w5_step1c.pkl  DMH_1min_2025_robust_Z_w5_step1c.pkl  DMH_2024_reference_E_w5_step1c.pkl  DMH_2024_reference_N_w5_step1c.pkl  DMH_2024_reference_Z_w5_step1c.pkl  DMH_2024_robust_E_w5_step1c.pkl  DMH_2024_robust_N_w5_step1c.pkl  DMH_2024_robust_Z_w5_step1c.pkl
documentation/: BASELINE_algorithm.md  BASELINE_v2_design.md
scripts/: example_with_real_data.py  example_with_real_data_v2.py  example_with_supermag_data.py  example_with_supermag_data_v2.py  example_with_synthetic_data.py  supermag_example_plotting.py  synthetic_data_generator.py
tests/: test_v2_reference_pipeline.py  test_v2_robust_step1c.py  test_v2_step1c_prepare.py  test_v2_variance.py
