[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseline"
version = "0.1"
description = "Open source implementation of the SuperMAG baseline estimation workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baseline"]
